Updating delete api.
