# swagger.json
@@ -179,6 +179,39 @@
           }
         }
       }
+    },
+    "/users/{empId}": {
+      "delete": {
+        "tags": ["Users"],
+        "summary": "deleteUser",
+        "description": "Delete a user by their empId.",
+        "parameters": [
+          {
+            "name": "empId",
+            "in": "path",
+            "description": "A valid empId.",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "404": {
+            "description": "Not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
+
   }
 }
